# Track_Bot

src/track_bot_ctrl/: CMakeLists.txt  package.xml
src/track_bot_sim/: package.xml
src/track_bot_sim/launch/: sim.launch.py
src/track_bot_sim/urdf/: setup.xacro
track_bot_ctrl/config/: ctrl.yaml
track_bot_ctrl/launch/: ctrl.launch.py
track_bot_ctrl/src/: keyboard_ctrl.py  keyboard_ctrl2.py
track_bot_sim/: CMakeLists.txt  package.xml
track_bot_sim/launch/: sim.launch.py
track_bot_sim/rviz/: track_bot.rviz
track_bot_sim/src/: odom_pub.cpp  odom_publisher.py  world_publisher.cpp
track_bot_sim/urdf/: funtions.xacro  gazebo.xacro  gazebo_camera.xacro  model.urdf.xacro
track_bot_sim/worlds/: test_world.world
